--- a/src/main/resources/com/example/isuusclient/main-view.fxml
+++ b/src/main/resources/com/example/isuusclient/main-view.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -11,28 +10,18 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="720.0" styleClass="tableW" stylesheets="@collor.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <TableView prefHeight="328.0" prefWidth="650.0" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn prefWidth="75.0" text="Фамилия" />
-          <TableColumn prefWidth="75.0" text="Имя" />
-            <TableColumn prefWidth="75.0" text="Отчество" />
-            <TableColumn prefWidth="75.0" text="Группа" />
-            <TableColumn prefWidth="113.0" text="Специальность" />
-            <TableColumn prefWidth="143.0" text="№ Зачетной книжки" />
-        </columns>
-      </TableView>
-   </center>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="907.0" styleClass="fon" stylesheets="@iscol.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.isuusclient.controller.MainController">
    <top>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" stylesheets="@collor.css" BorderPane.alignment="CENTER">
+      <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" styleClass="anchorPaCity" stylesheets="@iscol.css" BorderPane.alignment="CENTER">
         <buttons>
-          <Button minWidth="70.0" mnemonicParsing="false" prefHeight="25.0" text="Список групп" />
-            <Button layoutX="535.0" layoutY="18.0" mnemonicParsing="false" prefHeight="25.0" text="Список специальностей" />
-            <Button layoutX="535.0" layoutY="18.0" mnemonicParsing="false" text="Список предметов" />
-            <TextField prefHeight="25.0" prefWidth="160.0" />
-            <Button graphicTextGap="3.0" minWidth="60.0" mnemonicParsing="false" prefHeight="25.0" text="Поиск">
+            <ImageView fitHeight="35.0" fitWidth="30.0">
+               <image>
+                  <Image url="@../../../../../../../../Downloads/pngwing.com(8).png" />
+               </image>
+            </ImageView>
+            <Button graphicTextGap="3.0" minWidth="60.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="177.0" styleClass="buttons" stylesheets="@iscol.css" text="Поиск" textFill="WHITE">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -40,41 +29,56 @@
                   <Cursor fx:constant="NONE" />
                </cursor>
             </Button>
-            <ImageView fitHeight="33.0" fitWidth="45.0">
-               <image>
-                  <Image url="@../../../../../../../../../Downloads/pngwing.com%20(7).png" />
-               </image>
-            </ImageView>
+            <TextField prefHeight="25.0" prefWidth="160.0" />
+            <Button layoutX="535.0" layoutY="18.0" mnemonicParsing="false" prefHeight="28.0" styleClass="buttons" stylesheets="@iscol.css" text="Список предметов" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button layoutX="535.0" layoutY="18.0" mnemonicParsing="false" prefHeight="28.0" styleClass="buttons" stylesheets="@iscol.css" text="Список специальностей" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+          <Button minWidth="70.0" mnemonicParsing="false" prefHeight="25.0" styleClass="buttons" stylesheets="@iscol.css" text="Список групп" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
         </buttons>
          <BorderPane.margin>
-            <Insets />
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </BorderPane.margin>
-         <styleClass>
-            <String fx:value="anchorPaCity" />
-            <String fx:value="Hbox" />
-         </styleClass>
          <padding>
             <Insets right="15.0" />
          </padding>
       </ButtonBar>
    </top>
    <bottom>
-      <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" stylesheets="@collor.css" BorderPane.alignment="BOTTOM_LEFT">
+      <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" styleClass="anchorPaCity" stylesheets="@iscol.css" BorderPane.alignment="BOTTOM_LEFT">
          <buttons>
-            <Button mnemonicParsing="false" text="Добавить" textAlignment="CENTER" />
-            <Button mnemonicParsing="false" text="Изменить" />
-            <Button mnemonicParsing="false" text="Удалить" />
+            <Button mnemonicParsing="false" styleClass="buttons" stylesheets="@iscol.css" text="Добавить" textAlignment="CENTER" textFill="WHITE" />
+            <Button mnemonicParsing="false" styleClass="buttons" stylesheets="@iscol.css" text="Изменить" textFill="WHITE" />
+            <Button mnemonicParsing="false" onAction="#deleteBookAction" styleClass="buttons" stylesheets="@iscol.css" text="Удалить" textFill="WHITE" />
          </buttons>
          <BorderPane.margin>
-            <Insets />
+            <Insets bottom="5.0" left="5.0" right="5.0" />
          </BorderPane.margin>
-         <styleClass>
-            <String fx:value="anchorPaCity" />
-            <String fx:value="Hbox" />
-         </styleClass>
          <padding>
             <Insets right="10.0" />
          </padding>
       </ButtonBar>
    </bottom>
+   <left>
+      <TableView fx:id="studentTable" prefHeight="300.0" prefWidth="725.0" styleClass="table" stylesheets="@iscol.css" BorderPane.alignment="CENTER">
+        <columns>
+          <TableColumn fx:id="surnameTable" prefWidth="75.0" styleClass="column" text="Фамилия" />
+          <TableColumn fx:id="nameTable" prefWidth="75.0" styleClass="column" text="Имя" />
+            <TableColumn fx:id="lastNameTable" prefWidth="75.0" styleClass="column" text="Отчество" />
+            <TableColumn fx:id="groupColumn" prefWidth="75.0" styleClass="column" text="Группа" />
+            <TableColumn fx:id="specialTable" prefWidth="113.0" text="Специальность" visible="false" />
+            <TableColumn fx:id="recbookTable" prefWidth="134.0" styleClass="column" text="№ Зачетной книжки" />
+        </columns>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" />
+         </BorderPane.margin>
+      </TableView>
+   </left>
 </BorderPane>
