--- a/src/main/resources/com/example/isuusclient/ad-assessmen-view.fxml
+++ b/src/main/resources/com/example/isuusclient/ad-assessmen-view.fxml
@@ -3,21 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="169.0" prefWidth="334.0" styleClass="dialogFon" stylesheets="@iscol.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.isuusclient.controller.LessonAddController">
+<AnchorPane prefHeight="169.0" prefWidth="551.0" styleClass="dialogFon" stylesheets="@iscol.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.isuusclient.controller.AssessmenAddController">
    <children>
-      <TextField layoutX="73.0" layoutY="34.0" prefHeight="25.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
+      <TextField fx:id="textAssessmen" layoutX="73.0" layoutY="34.0" prefHeight="25.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
       <Text fill="WHITE" layoutX="14.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Оценка" />
       <ButtonBar layoutX="43.0" layoutY="120.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button mnemonicParsing="false" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
-            <Button mnemonicParsing="false" styleClass="buttonnnn" stylesheets="@iscol.css" text="Отмена" textFill="WHITE" />
+            <Button mnemonicParsing="false" onAction="#addAssessmen" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
+            <Button mnemonicParsing="false" onAction="#cancel" styleClass="buttonnnn" stylesheets="@iscol.css" text="Отмена" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <ComboBox layoutX="143.0" layoutY="81.0" prefHeight="26.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
+      <ComboBox fx:id="comBoxLesson" layoutX="143.0" layoutY="81.0" prefHeight="26.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
       <Text fill="WHITE" layoutX="14.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Изучаемый предмет" />
+      <ListView fx:id="dataList" layoutX="351.0" layoutY="6.0" prefHeight="151.0" prefWidth="186.0" styleClass="krushok" stylesheets="@iscol.css" />
    </children>
 </AnchorPane>
