--- a/src/main/resources/com/example/isuusclient/add-lesson-view.fxml
+++ b/src/main/resources/com/example/isuusclient/add-lesson-view.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="169.0" prefWidth="334.0" styleClass="dialogFon" stylesheets="@iscol.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.isuusclient.controller.LessonAddController">
+<AnchorPane prefHeight="169.0" prefWidth="523.0" styleClass="dialogFon" stylesheets="@iscol.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.isuusclient.controller.LessonAddController">
    <children>
       <TextField layoutX="143.0" layoutY="35.0" prefHeight="25.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
       <Text fill="WHITE" layoutX="14.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Название предмета" />
@@ -20,5 +20,6 @@
       </ButtonBar>
       <ComboBox layoutX="143.0" layoutY="81.0" prefHeight="26.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
       <Text fill="WHITE" layoutX="38.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Специальность" />
+      <ListView fx:id="dataList" layoutX="323.0" layoutY="9.0" prefHeight="151.0" prefWidth="186.0" styleClass="krushok" stylesheets="@iscol.css" />
    </children>
 </AnchorPane>
