--- a/src/main/resources/com/example/isuusclient/iscol.css
+++ b/src/main/resources/com/example/isuusclient/iscol.css
@@ -16,6 +16,8 @@
 
 .krushok{
     -fx-background-radius:30;
+    -fx-font-family: "Comic Sans MS";
+    -fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #ffffff, rgba(255, 255, 255, 0.46));
 }
 
 .fon{
