--- a/src/main/resources/com/example/isuusclient/ad-assessmen-view.fxml
+++ b/src/main/resources/com/example/isuusclient/ad-assessmen-view.fxml
@@ -14,12 +14,12 @@
       <Text fill="WHITE" layoutX="14.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Оценка" />
       <ButtonBar layoutX="43.0" layoutY="120.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-            <Button mnemonicParsing="false" onAction="#addAssessmen" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
+            <Button fx:id="saveAssess" mnemonicParsing="false" onAction="#addAssessmen" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
             <Button mnemonicParsing="false" onAction="#cancel" styleClass="buttonnnn" stylesheets="@iscol.css" text="Отмена" textFill="WHITE" />
          </buttons>
       </ButtonBar>
       <ComboBox fx:id="comBoxLesson" layoutX="143.0" layoutY="81.0" prefHeight="26.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
       <Text fill="WHITE" layoutX="14.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Изучаемый предмет" />
-      <ListView fx:id="dataList" layoutX="351.0" layoutY="6.0" prefHeight="151.0" prefWidth="186.0" styleClass="krushok" stylesheets="@iscol.css" />
+      <ListView fx:id="dataList" layoutX="351.0" layoutY="6.0" onEditStart="#onMouseClickDataList" prefHeight="151.0" prefWidth="186.0" styleClass="krushok" stylesheets="@iscol.css" />
    </children>
 </AnchorPane>
