--- a/src/main/resources/com/example/isuusclient/add-group-view.fxml
+++ b/src/main/resources/com/example/isuusclient/add-group-view.fxml
@@ -10,17 +10,17 @@
 
 <AnchorPane prefHeight="181.0" prefWidth="524.0" styleClass="dialogFon" stylesheets="@iscol.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.isuusclient.controller.GroupAddController">
    <children>
-      <TextField layoutX="133.0" layoutY="53.0" prefHeight="25.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
+      <TextField fx:id="textGroup" layoutX="133.0" layoutY="53.0" prefHeight="25.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
       <Text fill="WHITE" layoutX="14.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Название группы" />
       <ButtonBar layoutX="59.0" layoutY="88.0" prefHeight="40.0" prefWidth="215.0">
         <buttons>
-            <Button layoutX="135.0" layoutY="17.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
-          <Button mnemonicParsing="false" styleClass="buttonnnn" stylesheets="@iscol.css" text="Отмена" textFill="WHITE" />
+            <Button fx:id="saveGroup" layoutX="135.0" layoutY="17.0" mnemonicParsing="false" onAction="#addGroup" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
+          <Button mnemonicParsing="false" onAction="#cancel" styleClass="buttonnnn" stylesheets="@iscol.css" text="Отмена" textFill="WHITE" />
         </buttons>
          <padding>
             <Insets right="20.0" />
          </padding>
       </ButtonBar>
-      <ListView fx:id="dataList" layoutX="324.0" layoutY="15.0" prefHeight="151.0" prefWidth="186.0" styleClass="krushok" stylesheets="@iscol.css" />
+      <ListView fx:id="dataList" layoutX="324.0" layoutY="15.0" onMouseClicked="#onMouseClickDataList" prefHeight="151.0" prefWidth="186.0" styleClass="krushok" stylesheets="@iscol.css" />
    </children>
 </AnchorPane>
