--- a/src/main/resources/com/example/isuusclient/add-lesson-view.fxml
+++ b/src/main/resources/com/example/isuusclient/add-lesson-view.fxml
@@ -10,15 +10,15 @@
 
 <AnchorPane prefHeight="169.0" prefWidth="523.0" styleClass="dialogFon" stylesheets="@iscol.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.isuusclient.controller.LessonAddController">
    <children>
-      <TextField layoutX="143.0" layoutY="35.0" prefHeight="25.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
+      <TextField fx:id="textLesson" layoutX="143.0" layoutY="35.0" prefHeight="25.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
       <Text fill="WHITE" layoutX="14.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Название предмета" />
       <ButtonBar layoutX="43.0" layoutY="120.0" prefHeight="40.0" prefWidth="200.0">
         <buttons>
-            <Button mnemonicParsing="false" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
-            <Button mnemonicParsing="false" styleClass="buttonnnn" stylesheets="@iscol.css" text="Отмена" textFill="WHITE" />
+            <Button fx:id="saveLesson" mnemonicParsing="false" onAction="#addLesson" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
+            <Button mnemonicParsing="false" onAction="#cancel" styleClass="buttonnnn" stylesheets="@iscol.css" text="Отмена" textFill="WHITE" />
         </buttons>
       </ButtonBar>
-      <ComboBox layoutX="143.0" layoutY="81.0" prefHeight="26.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
+      <ComboBox fx:id="comboboxSpecial" layoutX="143.0" layoutY="81.0" prefHeight="26.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
       <Text fill="WHITE" layoutX="38.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Специальность" />
       <ListView fx:id="dataList" layoutX="323.0" layoutY="9.0" prefHeight="151.0" prefWidth="186.0" styleClass="krushok" stylesheets="@iscol.css" />
    </children>
