--- a/src/main/resources/com/example/isuusclient/add-special-view.fxml
+++ b/src/main/resources/com/example/isuusclient/add-special-view.fxml
@@ -3,22 +3,24 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="112.0" prefWidth="360.0" styleClass="dialogFon" stylesheets="@iscol.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.isuusclient.controller.GroupAddController">
+<AnchorPane prefHeight="196.0" prefWidth="565.0" styleClass="dialogFon" stylesheets="@iscol.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.isuusclient.controller.SpecialAddController">
    <children>
-      <TextField layoutX="170.0" layoutY="25.0" prefHeight="25.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
-      <Text fill="WHITE" layoutX="14.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Название специальности" />
-      <ButtonBar layoutX="63.0" layoutY="56.0" prefHeight="40.0" prefWidth="215.0">
+      <TextField fx:id="specialText" layoutX="170.0" layoutY="63.0" prefHeight="25.0" prefWidth="172.0" styleClass="dialogMenu" stylesheets="@iscol.css" />
+      <Text fill="WHITE" layoutX="14.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Название специальности" />
+      <ButtonBar layoutX="63.0" layoutY="94.0" prefHeight="40.0" prefWidth="215.0">
          <buttons>
-            <Button layoutX="135.0" layoutY="17.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
-            <Button mnemonicParsing="false" styleClass="buttonnnn" stylesheets="@iscol.css" text="Отмена" textFill="WHITE" />
+            <Button fx:id="saveSpecialButton" layoutX="135.0" layoutY="17.0" mnemonicParsing="false" onAction="#addSpecial" prefHeight="28.0" prefWidth="94.0" styleClass="buttonnnn" stylesheets="@iscol.css" text="Сохранить" textFill="WHITE" />
+            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancel" styleClass="buttonnnn" stylesheets="@iscol.css" text="Отмена" textFill="WHITE" />
          </buttons>
          <padding>
             <Insets right="20.0" />
          </padding>
       </ButtonBar>
+      <ListView fx:id="dataList" layoutX="365.0" layoutY="21.0" onMouseClicked="#onMouseClickDataList" prefHeight="151.0" prefWidth="186.0" styleClass="krushok" stylesheets="@iscol.css" />
    </children>
 </AnchorPane>
