--- a/src/main/resources/com/example/isuusclient/main-view.fxml
+++ b/src/main/resources/com/example/isuusclient/main-view.fxml
@@ -30,7 +30,7 @@
                </cursor>
             </Button>
             <TextField prefHeight="25.0" prefWidth="160.0" />
-            <Button layoutX="535.0" layoutY="18.0" mnemonicParsing="false" onAction="#assessmenList" prefHeight="28.0" styleClass="buttons" stylesheets="@iscol.css" text="Список предметов" textFill="WHITE">
+            <Button layoutX="535.0" layoutY="18.0" mnemonicParsing="false" onAction="#lessonList" prefHeight="28.0" styleClass="buttons" stylesheets="@iscol.css" text="Список предметов" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
@@ -55,7 +55,7 @@
       <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" styleClass="anchorPaCity" stylesheets="@iscol.css" BorderPane.alignment="BOTTOM_LEFT">
          <buttons>
             <Button mnemonicParsing="false" onAction="#addStudent" styleClass="buttons" stylesheets="@iscol.css" text="Добавить" textAlignment="CENTER" textFill="WHITE" />
-            <Button mnemonicParsing="false" styleClass="buttons" stylesheets="@iscol.css" text="Изменить" textFill="WHITE" />
+            <Button mnemonicParsing="false" onAction="#changeStudent" styleClass="buttons" stylesheets="@iscol.css" text="Изменить" textFill="WHITE" />
             <Button mnemonicParsing="false" styleClass="buttons" stylesheets="@iscol.css" text="Удалить" textFill="WHITE" />
          </buttons>
          <BorderPane.margin>
